--- a/vagrantfile
+++ b/vagrantfile
@@ -58,6 +58,6 @@ Vagrant.configure("2") do |config|
             sudo nmcli con modify eth0 ipv4.method manual
             sudo nmcli con up eth0 &
         SHELL
-        kubernetes.vm.provision "shell", path: "/setup.sh"
+        kubernetes.vm.provision "shell", path: "./setup.sh"
     end
 end
